[package]
name = "fuse-grpc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
bytes = "1.5.0"
env_logger = "0.10.0"
fuse3 = { version = "0.6.1", features = ["tokio-runtime", "unprivileged"] }
futures-util = "0.3.29"
libc = "0.2.150"
log = "0.4.20"
prost = "0.12.2"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
